Added neural network

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,8 @@
     "2. [Loading data](#loading_data)\n",
     "3. [Vectorizer](#vectorizer)\n",
     "4. [Model](#model)\n",
-    "5. [Improvements](#improvements)"
+    "5. [Improvements](#improvements)\n",
+    "6. [Neural network](#neural_network)"
    ]
   },
   {
@@ -1022,7 +1023,7 @@
    "id": "62ba160c-c6eb-4b86-90b3-8c2a6bc2d076",
    "metadata": {},
    "source": [
-    "Nope. Lemmatization slightly reduces the accuracy score compared to the unchanged TF-IDF vectorized data."
+    "### Nope. Lemmatization slightly reduces the accuracy score compared to the unchanged TF-IDF vectorized data."
    ]
   },
   {
@@ -1032,7 +1033,18 @@
     "tags": []
    },
    "source": [
-    "Next, let's test a neural network."
+    "### Next, let's test a neural network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241ff71e-e4df-4e4d-91a7-48f4d88a191e",
+   "metadata": {},
+   "source": [
+    "<a id='neural_network'/>\n",
+    "\n",
+    "### Neural network\n",
+    "[Back to TOC](#TOC)"
    ]
   },
   {
@@ -1179,7 +1191,7 @@
    "id": "b4bdf2d5-02ab-4aa4-9c93-17ddaaad016f",
    "metadata": {},
    "source": [
-    "Define the model. Note that it uses word embeddings."
+    "### Define the model. Note that it uses word embeddings."
    ]
   },
   {
@@ -1378,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 426,
    "id": "ff9d9ee2-e486-4d46-b374-f6e947bbc5ac",
    "metadata": {
     "tags": []
@@ -1387,10 +1399,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f873e0be750>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f873d76f150>"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1423,7 +1435,7 @@
     "tags": []
    },
    "source": [
-    "This model is slightly better than the TF-IDF-vectorized Logistic Regression model from before (6 more true negatives and 1 more true positive)."
+    "### This model is slightly better than the TF-IDF-vectorized Logistic Regression model from before (6 more true negatives and 1 more true positive)."
    ]
   },
   {
