Added neural network

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b17cffc-99bb-4eb2-8f62-f7001a0b693a",
+   "cell_type": "markdown",
+   "id": "cac7d0d6-851a-41c9-9440-16c39887dd70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Kaggle NLP competition\n",
+    "https://www.kaggle.com/competitions/nlp-getting-started\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,14 +26,6 @@
     "5. [Improvements](#improvements)\n",
     "6. [Neural network](#neural_network)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca30cad6-f9f4-4bfd-9976-391b9db77c49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -137,9 +130,9 @@
     "tags": []
    },
    "source": [
-    "Let's have a look at the train and test dataset.\n",
+    "### Let's have a look at the train and test dataset.\n",
     "\n",
-    "They contain:\n",
+    "#### They contain:\n",
     "- id\n",
     "- keyword: A keyword from that tweet (although this may be blank!)\n",
     "- location: The location the tweet was sent from (may also be blank)\n",
@@ -370,7 +363,7 @@
     "tags": []
    },
    "source": [
-    "Transform the text so that each word is a separate feature and count how many times that word occurs. (Save as a sparse matrix.)"
+    "### Transform the text so that each word is a separate feature and count how many times that word occurs. (Save as a sparse matrix.)"
    ]
   },
   {
@@ -412,7 +405,7 @@
     "tags": []
    },
    "source": [
-    "Vocabulary sample:"
+    "### Vocabulary sample:"
    ]
   },
   {
@@ -479,7 +472,7 @@
    "id": "aaac3a9a-1924-4ede-bf2a-ef160c05c176",
    "metadata": {},
    "source": [
-    "Show the (sparse) feature matrix:"
+    "### Show the (sparse) feature matrix:"
    ]
   },
   {
@@ -531,7 +524,7 @@
     "tags": []
    },
    "source": [
-    "Let's train a logistic regression model with the train data"
+    "### Let's train a logistic regression model with the train data"
    ]
   },
   {
@@ -604,7 +597,7 @@
     "tags": []
    },
    "source": [
-    "Let's check which words are most probably associated with actual disasters and which are not."
+    "### Let's check which words are most probably associated with actual disasters and which are not."
    ]
   },
   {
@@ -658,7 +651,7 @@
    "id": "983d4f75-8800-4673-849b-305ed86303de",
    "metadata": {},
    "source": [
-    "Let's try to improve our prediction by considering term frequency using TF-IDF "
+    "### Let's try to improve our prediction by considering term frequency using TF-IDF "
    ]
   },
   {
@@ -864,7 +857,7 @@
    "id": "14658900-3888-4a89-9012-82b0169e6d07",
    "metadata": {},
    "source": [
-    "Using TF-IDF, we have increased our accuracy score slightly."
+    "### Using TF-IDF, we have increased our accuracy score slightly."
    ]
   },
   {
@@ -872,7 +865,7 @@
    "id": "850641f2-2910-4c52-b2a6-f48d8cde70af",
    "metadata": {},
    "source": [
-    "Let's make the texts more comparable by using stemming."
+    "### Let's make the texts more comparable by using stemming."
    ]
   },
   {
@@ -930,7 +923,7 @@
     "tags": []
    },
    "source": [
-    "Stemming reduces the accuracy again. What about Lemmatization?"
+    "### Stemming reduces the accuracy again. What about Lemmatization?"
    ]
   },
   {
